--- a/themes/kmom02/scss/mobile-menu.scss
+++ b/themes/kmom02/scss/mobile-menu.scss
@@ -3,6 +3,10 @@
     transition: height 0.5s ease-in !important;
 }
 
+.hidden {
+    display: none !important;
+}
+
 .nav ul {
     display: flex;
     justify-content: flex-end;
